codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__experimental_features_view__tests__voice_runtime_unavailable.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Codez server.
  No server experiments available.


  No experimental features available for now


  space toggle · enter save · esc save/close
